fix(console): no scrollbars on side-menu

--- a/packages/design-system/src/styles/global.css
+++ b/packages/design-system/src/styles/global.css
@@ -8,3 +8,14 @@
   font-family: 'Inter', 'Gill Sans', 'Gill Sans MT', 'Helvetica Neue', Helvetica,
     Arial, sans-serif;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
